StdLib Man Inc Sources
Improve organization of the additional Manual source assets by adopting
the `StdLibMan-inc_` prefix to all files that are being imported via the
`include::` directive:

- Rename `table_verbs.dsv` to `StdLibMan-inc_table_verbs.dsv`.
- Create `StdLibMan-inc_attributes.adoc` and move therein all the custom
  attributes definitions from `StdLibMan.asciidoc`.
- Update README accordingly.

--- a/extras_src/manual/StdLibMan3_01.adoc
+++ b/extras_src/manual/StdLibMan3_01.adoc
@@ -43,7 +43,7 @@ The synonyms and built-in syntaxes are listed in connection with each verb.
 
 [cols="m,d,d",options="header",format=dsv]
 |===============================================================================
-include::table_verbs.dsv[]
+include::StdLibMan-inc_table_verbs.dsv[]
 |===============================================================================
 
 
