--- a/extras_src/manual/StdLibMan2_03.adoc
+++ b/extras_src/manual/StdLibMan2_03.adoc
@@ -9,7 +9,7 @@
 ////
 
 
-[[ch4]]
+[[ch.things]]
 = Things
 
 In ALAN, "`things`" is the comprehensive term for actors and objects.
@@ -21,25 +21,43 @@ Thus, if you want the hero to be able to take a cat or a bird, you should define
 
 Here is a list of transitive verbs that only work with actors:
 
-// @FIXME: Improve formatting of verbs list:
-ask, ask_for, follow, give, kill, kill_with, say_to, talk, tell, show,
+// 10 items -> 5 columns
+[cols="5*<m",width=75%,float=center,frame=none,grid=none,format=csv]
+|===============================================================================
+ask, ask_for, follow, give, kill, kill_with, say_to, talk, tell, show
+|===============================================================================
 
 while these verbs work with objects only:
 
-// @FIXME: Improve formatting of verbs list:
-bite, break, break_with, burn, burn_with, buy, clean, climb, climb_on, climb_through, close,close_with, consult, cut, cut_with, dig, dive_in, drink, drive, drop, eat, empty, empty_in, empty_on, examine, exit, extinguish, fill, fill_with, fire, fire_at, fix, get_off, go_to, jump_in, jump_on, knock, lie_in, lie_on, lift, light, lock, lock_with, look_in, look_out_of, look_through, open, open_with, play, pour, pour_in, pour_on, pry, pry_with, put, put_in, put_on, read, remove, remove_from, take, throw,tie
+// 62 items -> 6 columns + 4 empty items
+[cols="6*<m",width=90%,float=center,frame=none,grid=none,format=csv]
+|===============================================================================
+bite, break, break_with, burn, burn_with, buy, clean, climb, climb_on
+climb_through, close,close_with, consult, cut, cut_with, dig, dive_in, drink
+drive, drop, eat, empty, empty_in, empty_on, examine, exit, extinguish, fill
+fill_with, fire, fire_at, fix, get_off, go_to, jump_in, jump_on, knock, lie_in
+lie_on, lift, light, lock, lock_with, look_in, look_out_of, look_through, open
+open_with, play, pour, pour_in, pour_on, pry, pry_with, put, put_in, put_on
+read, remove, remove_from, take, throw, tie, "", "", "", ""
+|===============================================================================
 
 The following verbs work with both, but have slightly different outcomes:
 
-// @FIXME: Improve formatting of verbs list:
+// 8 items -> 4 columns
+[cols="4*<m",width=75%,float=center,frame=none,grid=none,format=csv]
+|===============================================================================
 kiss, listen, pull, push, push_with, rub, scratch, touch
+|===============================================================================
 
-Lastly, there are some verbs that won't work with either.
+Lastly, there are some verbs that won't work with either:
 
-// @FIXME: Improve formatting of verbs list:
+// 3 items -> 3 columns
+[cols="3*<m",width=50%,float=center,frame=none,grid=none,format=csv]
+|===============================================================================
 answer, say, write
+|===============================================================================
 
-as these verbs can only be used with quoted text:
+as these verbs can only be used with quoted text (i.e. string literals):
 
 [example,role="gametranscript"]
 ================================================================================
@@ -49,7 +67,7 @@ as these verbs can only be used with quoted text:
 ================================================================================
 
 
-Note that verbs don't take locations as their direct objects.
+Note that none of the library verbs accept locations as direct or indirect objects.
 Thus, the following won't work:
 
 [example,role="gametranscript"]
@@ -57,7 +75,7 @@ Thus, the following won't work:
 &gt; _examine bedroom_
 ================================================================================
 
-To have something like the above work, you should define a separate bedroom object, present in the bedroom location, that can then be examined or manipulated in some other ways if needed:
+In order to make something like this work, you should define a separate bedroom object, present in the bedroom location, which can then be examined or manipulated in any other way that might be required:
 
 // @EXTERNALIZE CODE: bedroom_object
 [source,alan]
