Manual: Ch 14. Run-Time Messages
Rebuild the StdLib Manual to mirror the updated `lib_messages_runtime.i`
module, which is imported in Ch 14. Also, polish the introductory text.

BUG: Syntax highlighting of the updated source file is breaking up after
the `CANT0` message definition, where the following string is not being
ended properly. There might be an issue with the current ALAN syntax for
Highlight. Should look into it (see #102).

--- a/extras_src/manual/StdLibMan4_01.adoc
+++ b/extras_src/manual/StdLibMan4_01.adoc
@@ -11,12 +11,14 @@
 
 
 [[ch.runtime-messages]]
-= Runtime Messages
+= Run-Time Messages
 
-Many of the runtime messages built into ALAN have been altered in the library from their default wording as stated in the ALAN manual.
-This is to ensure that plural is handled correctly and that there are no clashes between first and second person.
-The first person of some default wordings (for example "`I don't know the word $1`") is changed to a more passive or impersonal formulation.
-To edit these for your game, open `lib_messages.i` and edit the wanted message(s) there.
+The library redefines many of the standard messages built into ALAN, changing their original wording to accomodate the library needs, like ensuring correct handling of plural and preventing clashes between first and second person.
+
+Usage of the first person in some default messages (e.g. "`I don't understand.`") is replaced with a passive or impersonal formulation (e.g. "`That was not understood.`").
+
+If you need to change any of these messages in your game, open `lib_messages_runtime.i` and edit the desired message definition(s) therein.
+The `lib_messages_runtime.i` module contains the definitions of _all_ the messages available in ALAN, not just those that were changed; this was done on purpose, in order to facilitate game authors who would like to customize messages.
 
 [source,alan, role="lib"]
 ---------------------------------------------
